Fix Some Bugs And Design Custom Scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -242,3 +242,13 @@ body{
     border-radius: 6px;
     cursor: pointer;
 }
+
+/* Text Box Scrollbar Design */
+.details-container .inner .text-box::-webkit-scrollbar{
+    width: 8px;
+    background: #df5200;
+    border-radius: 4px;
+}
+.details-container .inner .text-box::-webkit-scrollbar-thumb{
+    background: #ff7f35;
+}
